# amp

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
cmake/: DetermineGCCCompatible.cmake  FindFLAC.cmake  FindLZ4.cmake  FindLibAV.cmake  FindMPCDec.cmake  FindOgg.cmake  FindOptimFROG.cmake  FindOpus.cmake  FindSoXR.cmake  FindVorbis.cmake  FindWavPack.cmake  MacOSXBundleInfo.plist.in
include/amp/: base64.hpp  bitops.hpp  crc.hpp  error.hpp  flat_map.hpp  flat_set.hpp  functional.hpp  md5.hpp  memory.hpp  muldiv.hpp  numeric.hpp  optional.hpp  range.hpp  ref_ptr.hpp  scope_guard.hpp  stddef.hpp  string.hpp  string_view.hpp  type_traits.hpp  u8string.hpp  utility.hpp
include/amp/audio/: channel_mapper.hpp  codec.hpp  decoder.hpp  demuxer.hpp  filter.hpp  format.hpp  input.hpp  output.hpp  packet.hpp  pcm.hpp  utility.hpp
include/amp/aux/: compressed_pair.hpp  features.hpp  flat_tree.hpp  iterator.hpp  map_value_compare.hpp  operators.hpp  string_search.hpp
include/amp/cxp/: char.hpp  map.hpp  string.hpp
include/amp/intrusive/: rbtree.hpp  set.hpp  slist.hpp
include/amp/io/: buffer.hpp  memory.hpp  reader.hpp  stream.hpp
include/amp/media/: ape.hpp  dictionary.hpp  id3.hpp  image.hpp  tags.hpp
include/amp/net/: endian.hpp  uri.hpp
plugins/: CMakeLists.txt
plugins/coreaudio/: CMakeLists.txt  decoder.cpp  error.hpp  output.cpp
plugins/demux/: CMakeLists.txt  adts.cpp  aiff.cpp  asf.cpp  au.cpp  caf.cpp  hls.cpp  m3u.hpp  mac.cpp  mp4.cpp  mp4_audio.cpp  mp4_audio.hpp  mp4_box.cpp  mp4_box.hpp  mp4_descriptor.hpp  mp4_movie.cpp  mp4_movie.hpp  mp4_track.cpp  mp4_track.hpp  mpa.cpp  real.cpp  tta.cpp  wave.cpp  wave.hpp
plugins/ffmpeg/: CMakeLists.txt  decoder.cpp
plugins/filter/: CMakeLists.txt  crossfeed.cpp  hdcd.cpp  hdcd_data.hpp  reverse_stereo.cpp
plugins/flac/: CMakeLists.txt  input.cpp
plugins/musepack/: CMakeLists.txt  input.cpp
plugins/optimfrog/: CMakeLists.txt  input.cpp
plugins/opus/: CMakeLists.txt  decoder.cpp  input.cpp
plugins/soxr/: CMakeLists.txt  resampler.cpp
plugins/vorbis/: CMakeLists.txt  decoder.cpp  error.hpp  input.cpp
plugins/wavpack/: CMakeLists.txt  input.cpp
src/: CMakeLists.txt  main.cpp
src/audio/: channel_mapper.cpp  channel_mixer.hpp  circular_buffer.cpp  circular_buffer.hpp  filter_chain.cpp  filter_chain.hpp  format.cpp  input_slice.hpp  pcm.cpp  player.cpp  player.hpp  replaygain.cpp  replaygain.hpp  sink_context.hpp
src/core/: base64.cpp  config.hpp  config_macos.mm  cpu.cpp  cpu.hpp  crc.cpp  curl_stream.cpp  error.cpp  event.hpp  file_stream.cpp  filesystem.cpp  filesystem.hpp  md5.cpp  muldiv.cpp  numeric.cpp  rbtree.cpp  registry.cpp  registry.hpp  spin_mutex.hpp  spsc_queue.hpp  u8string.cpp  uri.cpp
src/core/aux/: dynamic_library.hpp  unicode.hpp  winapi.hpp
src/media/: ape.cpp  cue_sheet.cpp  cue_sheet.hpp  id3v1.cpp  id3v2.cpp  playlist.cpp  playlist.hpp  tags.cpp  tags.hpp  title_format.cpp  title_format.hpp  track.hpp
src/ui/: album_art_view.cpp  album_art_view.hpp  audio_info_bar.cpp  audio_info_bar.hpp  audio_seek_bar.cpp  audio_seek_bar.hpp  audio_tool_bar.cpp  audio_tool_bar.hpp  icons.qrc  image_server.cpp  image_server.hpp  main_menu_bar.cpp  main_menu_bar.hpp  main_window.cpp  main_window.hpp  media_library.cpp  media_library.hpp  media_scanner.cpp  media_scanner.hpp  playlist_model.cpp  playlist_model.hpp  playlist_view.cpp  playlist_view.hpp  playlist_view_macos.mm  preferences_dialog.cpp  preferences_dialog.hpp  string.hpp  track_info_dialog.cpp  track_info_dialog.hpp  volume_button.cpp  volume_button.hpp
tests/: CMakeLists.txt  audio_packet_test.cpp  base64_test.cpp  bitops_test.cpp  crc_test.cpp  cue_sheet_test.cpp  filesystem_test.cpp  flat_map_test.cpp  flat_set_test.cpp  intrusive_set_test.cpp  intrusive_slist_test.cpp  io_buffer_test.cpp  io_reader_test.cpp  md5_test.cpp  media_dictionary_test.cpp  muldiv_test.cpp  numeric_cast_test.cpp  numeric_test.cpp  optional_test.cpp  spsc_queue_test.cpp  string_test.cpp  u8string_test.cpp  uri_test.cpp
